overflow fixes for landing page on small mobile devices (#1368)

--- a/app/assets/src/components/views/landing_page/Accordion.scss
+++ b/app/assets/src/components/views/landing_page/Accordion.scss
@@ -8,5 +8,6 @@
 
   @media (max-width: 768px) {
     padding: 0 $space-xl;
+    width: fit-content;
   }
 }
