--- a/app/assets/src/components/views/landing_page/Content.scss
+++ b/app/assets/src/components/views/landing_page/Content.scss
@@ -36,10 +36,9 @@
 }
 
 .summaryText {
-  @media (max-width: 768px) {
-    padding-left: $space-xl;
-    padding-right: $space-xl;
-  }
+  width: 33%;
+  margin-left: auto;
+  margin-top: 65px;
 
   h2 {
     margin: 0;
@@ -57,13 +56,11 @@
     }
   }
 
-  width: 33%;
-  margin-left: auto;
-  margin-top: 65px;
-
   @media (max-width: 768px) {
-    width: 100%;
+    width: fit-content;
     margin-top: 20px;
+    padding-left: $space-xl;
+    padding-right: $space-xl;
   }
 }
 
