--- a/app/assets/src/components/views/landing_page/WhitePaper.scss
+++ b/app/assets/src/components/views/landing_page/WhitePaper.scss
@@ -20,7 +20,7 @@
   &__Inner {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: fit-content;
     position: relative;
     z-index: 2;
     margin: 0 auto;
